[package]
name = "notedeck_columns"
version = { workspace = true }
authors = ["William Casarin <jb55@jb55.com>"]
edition = "2021"
#rust-version = "1.60"
license = "GPLv3"
description = "A tweetdeck-style notedeck app"

[lib]
crate-type = ["lib", "cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }
ndk-context = "0.1"

[dependencies]
opener = { workspace = true }
rmpv = { workspace = true }
bech32 = { workspace = true }
notedeck = { workspace = true }
tokenator = { workspace = true }
bitflags = { workspace = true }
dirs = { workspace = true }
eframe = { workspace = true }
thiserror = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_nav = { workspace = true }
egui_tabs = { workspace = true }
egui_virtual_list = { workspace = true }
ehttp = { workspace = true }
enostr = { workspace = true } 
hex = { workspace = true }
image = { workspace = true }
indexmap = { workspace = true }
nostrdb = { workspace = true }
notedeck_ui = { workspace = true }
robius-open = { workspace = true }
poll-promise = { workspace = true }
puffin = { workspace = true, optional = true }
puffin_egui = { workspace = true, optional = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
egui-winit = { workspace = true }
profiling = { workspace = true }
hashbrown = { workspace = true }
oot_bitset = { workspace = true }
human_format = "1.1.0"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
rfd = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11.0"

[features]
default = []
puffin = ["dep:puffin", "profiling/profile-with-puffin"]
tracy = ["profiling/profile-with-tracy"]

