[package]
name = "notedeck_dashboard"
edition = "2024"
version.workspace = true

[dependencies]
rustc-hash = "2.1.1"

egui = { workspace = true }
enostr = { workspace = true }
nostrdb = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
notedeck = { workspace = true }
notedeck_ui = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
egui_kittest = { workspace = true, features = ["snapshot", "wgpu"] }
enostr = { workspace = true }
notedeck = { workspace = true, features = ["snapshot-testing"] }
notedeck_testing = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[features]
default = []
snapshot-testing = ["notedeck/snapshot-testing"]
