[package]
name = "notedeck_dave"
edition = "2021"
version.workspace = true

[dependencies]
async-openai = { version = "0.28.0", features = ["rustls-webpki-roots"] }
egui = { workspace = true }
sha2 = { workspace = true }
notedeck = { workspace = true }
notedeck_ui = { workspace = true }
eframe = { workspace = true }
tokio = { workspace = true }
enostr = { workspace = true }
tracing = { workspace = true }
egui-wgpu = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
nostrdb = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
rand = "0.9.0"
bytemuck = "1.22.0"
futures = "0.3.31"
#reqwest = "0.12.15"
