[package]
name = "notedeck_dave"
edition = "2021"
version.workspace = true

[dependencies]
async-openai = { version = "0.28.0", features = ["rustls-webpki-roots"] }
claude-agent-sdk-rs = { path = "/home/jb55/dev/github/tyrchen/claude-agent-sdk-rs" }
egui = { workspace = true }
sha2 = { workspace = true }
notedeck = { workspace = true }
notedeck_ui = { workspace = true }
eframe = { workspace = true }
tokio = { workspace = true }
enostr = { workspace = true }
tracing = { workspace = true }
egui-wgpu = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
nostrdb = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
rand = "0.9.0"
uuid = { version = "1", features = ["v4"] }
bytemuck = "1.22.0"
futures = "0.3.31"
dashmap = "6"
#reqwest = "0.12.15"
egui_extras = { workspace = true }
similar = "2"
rfd = "0.14"
dirs = "5"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }

[[bin]]
name = "notedeck-spawn"
path = "src/bin/notedeck-spawn.rs"
