[package]
name = "notedeck_headway"
edition = "2024"
version.workspace = true

[dependencies]
notedeck = { workspace = true }
notedeck_ui = { workspace = true }
egui = { workspace = true }
nostrdb = { workspace = true }
enostr = { workspace = true }

[dev-dependencies]
egui_kittest = { workspace = true, features = ["snapshot", "wgpu"] }
notedeck = { workspace = true, features = ["snapshot-testing"] }
notedeck_testing = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[features]
default = []
snapshot-testing = ["notedeck/snapshot-testing"]
