[package]
name = "notedeck_horizon"
edition = "2024"
version.workspace = true

[dependencies]
egui = { workspace = true }
chrono = { workspace = true }
nostrdb = { workspace = true }
notedeck = { workspace = true }
notedeck_ui = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
egui_kittest = { workspace = true, features = ["snapshot", "wgpu"] }
notedeck = { workspace = true, features = ["snapshot-testing"] }
enostr = { workspace = true }
tempfile = { workspace = true }
