[package]
name = "notedeck_livestreams"
edition = "2024"
version.workspace = true

[dependencies]
egui = { workspace = true }
hex = { workspace = true }
nostrdb = { workspace = true }
notedeck = { workspace = true }
notedeck_ui = { workspace = true }
opener = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { version = "1", optional = true }
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }

[features]
default = []
inline-playback = ["dep:anyhow", "dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]
