[package]
name = "notedeck_messages"
version = { workspace = true }
edition = "2021"
description = "The direct messages app that ships with Notedeck"
license = "GPL-3.0-or-later"

[dependencies]
egui = { workspace = true }
egui_extras = { workspace = true }
egui_virtual_list = { workspace = true }
enostr = { workspace = true }
hashbrown = { workspace = true }
notedeck = { workspace = true }
nostrdb = { workspace = true }
profiling = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
notedeck_ui = { workspace = true }
chrono = { workspace = true }
nostr = { workspace = true }
egui_nav = { workspace = true }
crossbeam-channel = { workspace = true }
