[package]
name = "notedeck_messages"
version = { workspace = true }
edition = "2021"
description = "The direct messages app that ships with Notedeck"
license = "GPL-3.0-or-later"

[dependencies]
egui = { workspace = true }
egui_extras = { workspace = true }
egui_virtual_list = { workspace = true }
enostr = { workspace = true }
hashbrown = { workspace = true }
notedeck = { workspace = true }
nostrdb = { workspace = true }
profiling = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
notedeck_ui = { workspace = true }
chrono = { workspace = true }
nostr = { workspace = true }
egui_nav = { workspace = true }
egui-winit = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
egui_kittest = { workspace = true, features = ["eframe"] }
eframe = { workspace = true }
nostr-relay-builder = "0.37"
notedeck_testing = { workspace = true }
serial_test = "3"
tokio = { workspace = true, features = ["net", "io-util"] }
tracing-subscriber = { workspace = true }
url = { workspace = true }
