[package]
name = "notedeck_nostrverse"
edition = "2024"
version.workspace = true

[dependencies]
notedeck = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
enostr = { workspace = true }
glam = { workspace = true }
nostrdb = { workspace = true }
protoverse = { path = "../protoverse" }
renderbud = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
ehttp = { workspace = true }
sha2 = { workspace = true }
poll-promise = { workspace = true }
bytemuck = { workspace = true }
