[package]
name = "notedeck_publications"
version = { workspace = true }
edition = "2021"
description = "NKBIP-01 publication tree support for notedeck"

[dependencies]
nostrdb = { workspace = true }
enostr = { workspace = true }
nostr = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
