[package]
name = "notedeck_ui"
edition = "2021"
version.workspace = true

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui-winit = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
ehttp = { workspace = true }
nostrdb = { workspace = true }
tracing = { workspace = true }
poll-promise = { workspace = true }
profiling = { workspace = true }
tokio = { workspace = true }
notedeck = { workspace = true }
image = { workspace = true }
bitflags = { workspace = true }
enostr = { workspace = true }
hashbrown = { workspace = true }

blurhash = "0.2.3"
