[package]
name = "notedeck_wasm"
version = { workspace = true }
edition = "2021"
license = "GPLv3"
description = "WASM mini-app runtime for Notedeck"

[dependencies]
wasmer = "7"
notedeck = { workspace = true }
egui = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wat = "1"
dirs = { workspace = true }
