[package]
name = "renderbud"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { workspace = true }
bytemuck = { workspace = true }
egui-wgpu = { workspace = true, optional = true }
egui = { workspace = true, optional = true }

glam = { version = "0.30.10", features = ["bytemuck"] }
gltf = "1.4"
wgpu = { workspace = true }
half = "2.7.1"
rayon = "1.10"

[features]
egui = ["egui-wgpu", "dep:egui"]

[dev-dependencies]
winit = "0.30"
wgpu = { workspace = true }
gltf = "1.4"
pollster = { workspace = true }
